corrected relative url

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 
 	  <div id="container">
 	    <div class="lcars-column lcars-u-5">
-	      <babylon model="enterprise-e.glb"></babylon>
+	      <babylon model="/enterprise-e.glb"></babylon>
 	    </div>
 	  </div>
 	</div>
