prepared to configure viewer

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 	  </div>
 
 	  <div id="container">
-	    <babylon model="/enterprise-e.glb"></babylon>
+	    <babylon extends="extended" model="/enterprise-e.glb"></babylon>
 	  </div>
 	</div>
     </body>
